# dotfs

./: .ghci  .gitignore  DESIGN  DotFS.hs  Funion.hs  LICENSE  Makefile  README.md  Setup.lhs  TODO  dotfs.cabal  funion.cabal  index.html  test1.cfg
Core/: BodyParser.hs  Constants.hs  Datatypes.hs  ExpressionEvaluator.hs  ExpressionParsers.hs  FSActions.hs  FuseTypes.hs  HeaderParser.hs  HelperParsers.hs  Lexers.hs  Parser.hs  Parsers.hs  PrettyPrinter.hs
System/DotFS/: DotFS.hs
System/DotFS/Core/: BodyParser.hs  Constants.hs  Datatypes.hs  ExpressionEvaluator.hs  ExpressionParsers.hs  FSActions.hs  FuseTypes.hs  HeaderParser.hs  HelperParsers.hs  Lexers.hs  Parsers.hs
System/DotFS/Test/: Main.hs  Tests.hs  Unit.hs  Unit.hs-boot  Utility.hs
System/DotFS/Util/: Debug.hs  Options.hs  Sanity.hs  Version.hs
Util/: Debug.hs  Helpers.hs  Options.hs  Sanity.hs  Version.hs
examples/: example1.conf  example2.html  hullo  if.conf  issue18.file  noannots.conf  syscall.conf  test1.cfg
examples/sub/: testlink
initscript/: dotfs  dotfs.conf
prezi/: code1.pgf  dotfs_post.pgf  git.pgf  git2.pgf
prezi/codeexamples/: conditions_in_configs.pgf  configs_before.pgf  configs_before_notitles.pgf  dotfs_post.tex  dotfs_pre.tex  home_before.pgf  laptop_before.pgf  office_before.pgf
prezi/fileview/: files.pgf
src/: DotFS.hs  Unsupported.hs
src/Core/: BodyParser.hs  Datatypes.hs  ExpressionEvaluator.hs  ExpressionParsers.hs  FSActions.hs  HeaderParser.hs  HelperParsers.hs  Lexers.hs  Parsers.hs
src/Test/: Instances.hs  Main.hs  Tests.hs  Unit.hs  Unit.hs-boot  Utility.hs
src/Util/: Debug.hs  Options.hs  Sanity.hs  Version.hs
test/: ParserSpec.hs  Spec.hs
tests/: Instances.hs  Tests.hs  Unit.hs  Utility.hs
