name:                dotfs
version:             0.1.1.4
synopsis:            Filesystem to manage and parse dotfiles
description:         A system which, when pointed to a folder full of specially
                     annotated config files, will present these files tailored to
                     your current environment. Useful for making, for example, an if-block
                     in your mutt-config depending on your current location, which you
                     can retrieve via some shell command.
category:            System
license:             BSD3
license-file:        LICENSE
author:              Sjoerd Timmer and Paul van der Walt
maintainer:          Paul van der Walt <cabal@denknerd.org>
homepage:            https://github.com/toothbrush/dotfs
bug-reports:         https://github.com/toothbrush/dotfs/issues
build-type:          Simple
cabal-version:       >= 1.10

Test-Suite test-dotfs
  type:             exitcode-stdio-1.0
  build-depends:
                    base >= 4 && < 5,
                    HUnit >= 1.2 && < 2,
                    QuickCheck >= 2.4,
                    test-framework >= 0.4.1,
                    test-framework-quickcheck2,
                    test-framework-hunit,
                    containers,
                    transformers,
                    parsec >= 3,
                    haskell-src,
                    template-haskell
  ghc-options:      -Wall -rtsopts
  default-language: Haskell98
  main-is:          System/DotFS/Test/Main.hs

Executable            dotfs
  default-language:   Haskell98
  ghc-options:        -threaded
  main-is:            System/DotFS/DotFS.hs
  build-depends:      bytestring >=0.9,
                      base >= 4 && < 5,
                      HFuse > 0.2.4,
                      directory>=1,
                      unix >= 2.3,
                      filepath >=1.1,
                      parsec,
                      containers,
                      transformers,
                      process
  other-modules:      System.DotFS.Core.BodyParser,
                      System.DotFS.Core.ExpressionParsers,
                      System.DotFS.Core.Constants,
                      System.DotFS.Core.Datatypes,
                      System.DotFS.Core.ExpressionEvaluator,
                      System.DotFS.Core.FSActions,
                      System.DotFS.Core.FuseTypes,
                      System.DotFS.Core.HeaderParser,
                      System.DotFS.Core.HelperParsers,
                      System.DotFS.Core.Lexers,
                      System.DotFS.Core.Parsers,
                      System.DotFS.Test.Tests,
                      System.DotFS.Test.Unit,
                      System.DotFS.Test.Utility,
                      System.DotFS.Util.Debug,
                      System.DotFS.Util.Options,
                      System.DotFS.Util.Sanity,
                      System.DotFS.Util.Version
test-suite spec
  default-language:
      Haskell98
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      ., test
  main-is:
      Spec.hs
  build-depends:
      base
    , hspec
    , HUnit
    , parsec
    , transformers
    , containers


source-repository head
    type: git
    location: https://toothbrush@github.com/toothbrush/dotfs.git
